WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187146
Web Inspector: REGRESSION(
r223770
): "Open Link" context menu action on a linkified URL doesn't work
https://bugs.webkit.org/show_bug.cgi?id=187146
Summary
Web Inspector: REGRESSION(r223770): "Open Link" context menu action on a link...
Blaze Burg
Reported
2018-06-28 11:04:45 PDT
Steps to reproduce: 1. Go to TechCrunch.com 2. Inspect it 3. Open console 4. Find an error (such as CORS or CSP) and right click a linkified URL in the error message. 4. Select "Open Link"
> Nothing happens
Attachments
Patch
(1.92 KB, patch)
2018-06-28 11:25 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-06-28 11:05:03 PDT
<
rdar://problem/41369591
>
Blaze Burg
Comment 2
2018-06-28 11:25:32 PDT
Created
attachment 343819
[details]
Patch
Joseph Pecoraro
Comment 3
2018-06-28 12:04:28 PDT
Comment on
attachment 343819
[details]
Patch Oops!
WebKit Commit Bot
Comment 4
2018-06-28 12:14:55 PDT
Comment on
attachment 343819
[details]
Patch Clearing flags on attachment: 343819 Committed
r233316
: <
https://trac.webkit.org/changeset/233316
>
WebKit Commit Bot
Comment 5
2018-06-28 12:14:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug